--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,7 @@ android {
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         useLibrary 'android.test.base'
-        useLibrary 'android.test.mock'
+        testInstrumentationRunnerArguments clearPackageData: 'true'
     }
     buildTypes {
         release {
@@ -62,12 +62,9 @@ dependencies {
     testImplementation "android.arch.core:core-testing:1.1.1"
     testImplementation 'androidx.arch.core:core-testing:2.1.0'
     androidTestImplementation "androidx.test:runner:1.2.0"
-    testImplementation 'org.robolectric:robolectric:4.3'
 
     androidTestImplementation "com.android.support:support-annotations:28.0.0"
-    testImplementation "io.mockk:mockk-android:1.9.3"
     testImplementation 'org.robolectric:robolectric:4.3'
-    testImplementation 'com.agoda.kakao:kakao:2.1.0'
 
     // Core library
     androidTestImplementation 'androidx.test:core:1.2.0'
